- enhance table layout when use landscaping scrollbar. - other fixes.

--- a/angular/src/styles/theme.less
+++ b/angular/src/styles/theme.less
@@ -1,3 +1,6 @@
 // 可以通过 http://ng-alain.com/theme 生成相应的参数代码
 
 @scrollbar-table-enabled: true;
+.ant-table-fixed-header .ant-table-scroll .ant-table-header {
+    margin-bottom: -@scrollbar-height !important
+}
